--- a/style.css
+++ b/style.css
@@ -64,15 +64,18 @@ nav > ul > li > a {
 /* Main */
 main {
   display: grid;
-  grid-template-columns: 1fr 84% 1fr;
-  
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 3rem;
+  width: 90%;
+  margin: 0 auto;
 }
+
 .product-list {
   display: grid;
-  grid-column: 2;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 300px));
+  grid-column: 3;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 300px));
   grid-template-rows: auto;
-  gap: 3rem;
+  
   align-content: center;
   justify-content: center;
 }
@@ -80,7 +83,7 @@ main {
 .productlist article {
   display: flex;
   flex-direction: column;
-  grid-column: 1/-1;
+  
 }
 
 article > img {
@@ -90,6 +93,7 @@ article > img {
 
 article {
   background-color: rgb(255, 255, 255);
+  padding: 2%;
 }
 .item-details-bg {
   border: 1px solid rgb(228, 227, 216);
